Change/Fix: Invert all tabs' images for dark mode
This seems to look good, and it avoids the clash of having some bright
white, light-mode images when using dark-mode.  Since all of these
images are illustrations and diagrams, not photographs, it seems good.

--- a/assets/css/tabs.scss
+++ b/assets/css/tabs.scss
@@ -13,6 +13,10 @@ table td, table th {
 .tabs-section {
     display: flex;
     flex-direction: column;
+
+    html[data-theme=dark] & img {
+        filter: invert(1) !important;
+    }
 }
 
 .tabs-section .container {
@@ -133,10 +137,6 @@ img.first-column-layout {
     max-width: 100px;
     max-height: 30px;
     margin: 0px 20px 0px 10px;
-
-    html[data-theme=dark] & {
-        filter: invert(1) !important;
-    }
 }
 
 td.left-text {
